slicing 3-D Array and Advanced Indexing Completed

--- a/Numpy/2_creating_array.ipynb
+++ b/Numpy/2_creating_array.ipynb
@@ -2737,9 +2737,11 @@
   {
    "cell_type": "markdown",
    "id": "5c412b9c-162e-400e-8234-4db08be132f4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 1. Indexing"
+    "### 1. Indexing"
    ]
   },
   {
@@ -3035,15 +3037,19 @@
   {
    "cell_type": "markdown",
    "id": "9cbfbde8-b9a7-4190-bbba-ba54d230c4e2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 2. Slicing"
+    "### 2. Slicing"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1ea1c779-67ec-4520-81d0-9b57543993fb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 2a. 1-D ndarray"
    ]
@@ -3177,7 +3183,9 @@
   {
    "cell_type": "markdown",
    "id": "23384a6b-96d6-400e-9564-175ff8478de1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 2b. 2-D ndarray"
    ]
@@ -3391,9 +3399,516 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10372189-ff29-4c5a-a07e-12ecf0fd07c2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### 2c. 3-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5575be2c-9ce6-4f3a-8434-9cd9bd93984d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[13 72 37 47]\n",
+      "  [ 7 64 55  8]\n",
+      "  [42 27 15 84]]\n",
+      "\n",
+      " [[52 76 81  8]\n",
+      "  [65 97 53 66]\n",
+      "  [ 3 90  1 17]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(2,3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fe20f9d4-8b5a-4ae0-a7e5-c278893f81d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[13]\n",
+      "  [ 7]\n",
+      "  [42]]\n",
+      "\n",
+      " [[52]\n",
+      "  [65]\n",
+      "  [ 3]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first column elements of each dimention\n",
+    "print(a[:,:,:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "78d885a8-8a6d-4d71-b0cf-a8d8164f56c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[13 72 37 47]]\n",
+      "\n",
+      " [[52 76 81  8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first row elements of each dimention\n",
+    "print(a[:,:1,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9b3e2086-0532-4b93-b48f-0871d80b2ce9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[13 72 37 47]\n",
+      "  [42 27 15 84]]\n",
+      "\n",
+      " [[52 76 81  8]\n",
+      "  [ 3 90  1 17]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first and last row elements of each dimention\n",
+    "print(a[:,::2,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5d71e37f-56df-4814-a843-beb5a61f8ef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[72 37]\n",
+      "  [64 55]]\n",
+      "\n",
+      " [[76 81]\n",
+      "  [97 53]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# middle elements of first 2 rows of each dimention\n",
+    "# ==> second and third column elements of first two rows of each dimention\n",
+    "print(a[:,:2,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b9c30e46-859d-4b8a-af6a-158e40f487e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[13 47]\n",
+      "  [42 84]]\n",
+      "\n",
+      " [[52  8]\n",
+      "  [ 3 17]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# all four corner elements of each dimention \n",
+    "# ==> first and last column elements of first and last rows of each dimention\n",
+    "print(a[:,::2,::3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb1e824-a9bd-4815-ba44-41007a1e7661",
+   "metadata": {},
+   "source": [
+    "### 3. Advanced Indexing\n",
+    "- accessing Arbitrary Elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4bbda47f-1ed0-497e-bcb6-000f8c72277d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 10  20  30  40  50  60  70  80  90 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(10,101,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d828044b-59c7-4257-b896-65a0174a5e55",
+   "metadata": {},
+   "source": [
+    "#### 3a. 1-D Array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4820fdd5-624e-4162-a4da-de08e0f78c9e",
+   "metadata": {},
+   "source": [
+    "##### passing ndarray with required indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6189686a-de32-4563-80b4-9d19a0fccb26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30 50 60 90]\n",
+      "[30 90 50 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access 30 50 60 and 90\n",
+    "L = [2,4,5,8]\n",
+    "indices = np.array(L)\n",
+    "print(a[indices])\n",
+    "L1 = [2,8,4,5]\n",
+    "indices = np.array(L1) \n",
+    "print(a[indices])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cd6fa1e-c0b1-43bb-956f-63a2f240c1b2",
+   "metadata": {},
+   "source": [
+    "##### passing List of required Indices directly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2b95da7d-81c9-42e2-a6c2-d9094bd8141b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30 50 60 90]\n",
+      "[30 90 50 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[L])\n",
+    "print(a[L1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "631f8a34-da6f-42ea-9b95-98d49c0b39b1",
+   "metadata": {},
+   "source": [
+    "#### 3b. 2-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "27d18b37-5237-4b72-8384-54fef355cd61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[54 50 70 83]\n",
+      " [ 3 11 46 42]\n",
+      " [34 13 87 28]\n",
+      " [78 72 35 54]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(4,4))\n",
+    "print(a) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a2ac9114-9da7-48b5-b5ec-ea8729cf3347",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54 11 87 54]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access the main diagonal elements\n",
+    "row_indices = [0,1,2,3]\n",
+    "column_indices = [0,1,2,3]\n",
+    "print(a[row_indices,column_indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e7a5ef09-c57a-41b0-bec4-cd9e8f14e2ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50 42 34 35]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access 50 42 34 35 \n",
+    "row_indices = [0, 1, 2, 3 ]\n",
+    "column_indices = [1, 3, 0, 2 ]\n",
+    "print(a[row_indices,column_indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4e945665-ec87-4b5e-a259-77da72b0e918",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54  3 34 78 72 35 54]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access L-shape elements\n",
+    "row_indices = [0,1,2,3,3,3,3]\n",
+    "column_indices = [0,0,0,0,1,2,3,]\n",
+    "print(a[row_indices,column_indices])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75b2ff05-e6a6-42e6-9075-1b5840314a60",
+   "metadata": {},
+   "source": [
+    "#### Observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "396bfff6-fefb-4a7e-9793-d661a9e9091f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(a[[0,1,2],[0,1]])\n",
+    "# IndexError: shape mismatch: indexing arrays could not be broadcast together with shapes (3,) (2,) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c623217b-9456-4171-97f2-28b570ba5826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(a[[0,1],[0,1,2]])\n",
+    "# IndexError: shape mismatch: indexing arrays could not be broadcast together with shapes (2,) (3,) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2bf6e11b-278d-458e-b930-3f8c8efa208e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54  3 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[[0,1,2],[0]])            # ***** Surprised!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "02a777d7-fdc1-4f9d-9ff5-74cb1465e351",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54 50 70]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[[0],[0,1,2]])            # ***** Surprised!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e7a003b-404e-4121-9bb1-358b0c12890a",
+   "metadata": {},
+   "source": [
+    "#### 3c. 3-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3ac882f6-7150-4b2c-8b3c-c6519eb5fe83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 6 60 32  4]\n",
+      "  [ 2 87 27 41]\n",
+      "  [94 85 71 41]]\n",
+      "\n",
+      " [[65  7  9 88]\n",
+      "  [81 41 32 98]\n",
+      "  [61 95 25 63]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(2,3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a203c1aa-3ecb-4e79-b276-ea0ed2a10b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[87 32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 87 32\n",
+    "dimention_indices = [0,1]\n",
+    "row_indices = [1,1] \n",
+    "column_indices = [1,2] \n",
+    "print(a[dimention_indices,row_indices,column_indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0fed36b7-9a3f-4671-a5a2-a718f3e950a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[88 81 98]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 88 81 98\n",
+    "dimention_indices = [1,1,1]\n",
+    "row_indices = [0,1,1]\n",
+    "column_indices = [3,0,3]\n",
+    "print(a[dimention_indices,row_indices,column_indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e5446a8a-f130-46c2-bfda-da6cd71f1a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6 60 27 25 63]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6 60 27 25 63\n",
+    "dimention_indices = [0,0,0,1,1]\n",
+    "row_indices = [0,0,1,2,2] \n",
+    "column_indices = [0,1,2,2,3] \n",
+    "print(a[dimention_indices,row_indices,column_indices])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35d81b5-db2d-44fe-b025-fedc97491000",
+   "id": "9a230157-a565-45d9-9e1b-dbb1b4ea8e52",
    "metadata": {},
    "outputs": [],
    "source": []
