--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "53a7300f-61a2-4c59-99d2-8a5390ea29c3",
    "metadata": {},
    "outputs": [],
@@ -1171,8 +1171,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5a1fd4fc-a7ee-43c5-9e8f-ea5c2e676c3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[45 64 52 75 35]\n",
+      " [76 13 63  7 59]\n",
+      " [90 94 63 70 90]\n",
+      " [ 7 13 88 20 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(4,5))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "14c1c441-cbe9-4bbd-ac07-fde65e5588ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[2][3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "911b5a21-c2ee-4190-9675-5c89790f643d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[45]\n",
+      " [76]\n",
+      " [90]\n",
+      " [ 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:,:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "182534d6-a057-4ef8-bd1d-10843b971656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7 13 88 20 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[3:4,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "aceeaa22-021a-4418-9710-9a0662df21af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13 63  7]\n",
+      " [94 63 70]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[1:3,1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e2b7386-ef5e-41de-9cc7-6f8e396a813d",
    "metadata": {},
    "outputs": [],
    "source": []
