iteration over ndarray - upto nditer() completed

--- a/Numpy/2_creating_array.ipynb
+++ b/Numpy/2_creating_array.ipynb
@@ -7,7 +7,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Creating Numpy Arrays"
+    "# Creating Numpy Arrays"
    ]
   },
   {
@@ -2460,7 +2460,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Array Attributes"
+    "#ascii# Array Attributes"
    ]
   },
   {
@@ -2551,7 +2551,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Numpy Data types"
+    "# Numpy Data types"
    ]
   },
   {
@@ -2728,7 +2728,7 @@
    "id": "b98f59b5-049b-409b-b28a-8771209e938b",
    "metadata": {},
    "source": [
-    "## How to Access Elements of Numpy Array\n",
+    "# How to Access Elements of Numpy Array\n",
     "- Indexing ---> only one element at a time\n",
     "- Slicing ---> a group of elements \n",
     "- Advanced Indexing"
@@ -2741,7 +2741,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### 1. Indexing"
+    "## 1. Indexing"
    ]
   },
   {
@@ -3041,7 +3041,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### 2. Slicing"
+    "## 2. Slicing"
    ]
   },
   {
@@ -3553,9 +3553,11 @@
   {
    "cell_type": "markdown",
    "id": "7fb1e824-a9bd-4815-ba44-41007a1e7661",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### 3. Advanced Indexing\n",
+    "## 3. Advanced Indexing\n",
     "- accessing Arbitrary Elements"
    ]
   },
@@ -3581,9 +3583,11 @@
   {
    "cell_type": "markdown",
    "id": "d828044b-59c7-4257-b896-65a0174a5e55",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 3a. 1-D Array"
+    "#### 3a. 1-D ndarray"
    ]
   },
   {
@@ -3650,9 +3654,11 @@
   {
    "cell_type": "markdown",
    "id": "631f8a34-da6f-42ea-9b95-98d49c0b39b1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 3b. 2-D Array"
+    "#### 3b. 2-D ndarray"
    ]
   },
   {
@@ -3743,7 +3749,9 @@
   {
    "cell_type": "markdown",
    "id": "75b2ff05-e6a6-42e6-9075-1b5840314a60",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Observations"
    ]
@@ -3809,9 +3817,11 @@
   {
    "cell_type": "markdown",
    "id": "5e7a003b-404e-4121-9bb1-358b0c12890a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 3c. 3-D Array"
+    "#### 3c. 3-D ndarray"
    ]
   },
   {
@@ -3906,9 +3916,685 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e72a8830-9eb0-46fd-ba95-bd2926b7b0e1",
+   "metadata": {},
+   "source": [
+    "## 4. Condition Based Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f52f914-8c14-4900-9333-3c168bad6843",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 4a. 1-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "48714783-3497-4246-be90-5ba0bcd04fe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[73 24 74 10 65 23 64 64 17 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d8e34b2d-b288-4c6e-9220-1d1a2b6bba34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False False  True False  True  True False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = np.array([True,False,False,True,False,True,True,False,False,False])\n",
+    "print(boolean_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ac1d29ae-d042-40c8-9735-d7b65faf6808",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[73 10 23 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04daed7f-d562-49d1-8229-6f52d6663c83",
+   "metadata": {},
+   "source": [
+    "#### creating boolean_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a63de5ca-4e78-46c1-b6ab-d9649f19f714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False  True False  True False  True  True False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = a>50\n",
+    "print(boolean_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df85bbb9-94da-4886-a3c0-398a8f954edb",
+   "metadata": {},
+   "source": [
+    "#### Accessing Elements of Array based on values of boolean_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d64a491c-d39e-48d6-8b82-e934c5652ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[73 74 65 64 64 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab89cd2-3552-46a8-8038-ad51fd99b0d5",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Ex.1: select all negative values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7f41f8bd-5dbb-49ba-b429-73e9c5482e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 -8  9  1 -4 -4  5 -1  0 -1]\n",
+      "[False  True False False  True  True False  True False  True]\n",
+      "[-8 -4 -4 -1 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(-10,10,10)\n",
+    "print(a)\n",
+    "boolean_array = a<0\n",
+    "print(boolean_array)\n",
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee636203-fbbf-4877-aed3-7a549c924b96",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Ex.2 slect all positive values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "60a42517-c542-45a2-a647-914b9da87f59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 9 1 5 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = a>=0\n",
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5d1957b-920e-4626-931d-da069927fb94",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Ex.3 select all even number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "25d2ab43-6a8a-44e5-8a35-282ba858c0ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 -8 -4 -4  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = a%2==0\n",
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d66a2a61-5685-43f8-928b-e27ffd8b5332",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Ex.4 select all odd number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7015f640-c3af-42a9-bc63-ad5cec4082be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 9  1  5 -1 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = a%2!=0\n",
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "534bd081-0446-4d77-a2ff-f7f211343de2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 4b. 2-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a450f92b-7229-4263-b1b0-2b0ad6e9272f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]\n",
+      " [21 22 23 24 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1,26).reshape(5,5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "968ad5c0-21d2-4613-b32e-5960ffa0091a",
+   "metadata": {},
+   "source": [
+    "#### Ex.1 select all even number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "406cd3f6-4542-4cc0-99e7-a21b9dc7c437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10 12 14 16 18 20 22 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = a%2==0\n",
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abca8e57-f9ef-433e-9c56-e489fd4fc220",
+   "metadata": {},
+   "source": [
+    "#### Ex.2 Select Values Divisible by 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c091c869-5164-4180-9736-856bdc80327e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_array = a%10==0\n",
+    "print(a[boolean_array])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a11fbe1-1699-4243-9ca0-79940193fb29",
+   "metadata": {},
+   "source": [
+    "# Iteration over ndarray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18cbeea5-e6b2-4375-a72b-bfb9c5972f4f",
+   "metadata": {},
+   "source": [
+    "## 1. Python Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "825064be-7758-44c1-8bf2-d81f8fd41fc7",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 1-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "62a9cec9-d725-49de-a0c5-1a0805079426",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 29  1 93 76  3 14 21 32 88]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,10) \n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c9d841c3-16d0-4b29-8774-96c0936ba047",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 29 1 93 76 3 14 21 32 88 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in a:\n",
+    "    print(i,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f046676-d302-408e-835a-be4176361d2e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 2-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1ce424d4-2eb1-4631-a09e-02f3dde0e28a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.randint(1,101,(3,4))\n",
+    "# print(a)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4cd0899e-270d-4cab-8266-7d2fc4f0bc39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97 27 6 10 7 26 62 63 37 28 37 8 \n",
+      "97 27 6 10 7 26 62 63 37 28 37 8 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(a)):\n",
+    "    for j in range(len(a[i])):\n",
+    "        print(a[i][j],end=' ')\n",
+    "print()\n",
+    "# Alternatively\n",
+    "for x in a:\n",
+    "    for y in x:\n",
+    "        print(y,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4356eaf8-63c9-40ef-91f5-1d6b4d75d177",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 3-D ndarray "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7b4bb7ac-8f88-4a6a-a6c5-9fcb56967c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.randint(1,101,(2,3,4))\n",
+    "# print(a) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "749addfc-7cb1-4251-98e8-010a86b88c07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47 91 69 68 2 64 12 37 25 15 97 13 75 6 67 25 4 47 64 5 39 95 39 15 "
+     ]
+    }
+   ],
+   "source": [
+    "for x in a:\n",
+    "    for y in x:\n",
+    "        for z in y:\n",
+    "            print(z,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad556238-3b43-427a-9ec0-d60ff0fd6f5b",
+   "metadata": {},
+   "source": [
+    "## 2. nditer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e6be143-151b-4f24-92fa-acbb53c8e884",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 1-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ccf0b7da-53c2-4e2c-804e-9034d8fcc076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43 75 50 83 59 4 54 86 27 4 "
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,10)\n",
+    "for x in np.nditer(a):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3303bc1c-5d57-40cd-a00f-282d464f0828",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 2-D ndarray "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6b91760f-b47a-4986-88eb-b244f5d302a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41 9 98 91 89 25 11 71 97 26 59 23 "
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(3,4))\n",
+    "for x in np.nditer(a):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14cd1936-35e6-40d5-922a-83c187ceddba",
+   "metadata": {},
+   "source": [
+    "### 3-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9a38a8f5-893b-454f-90c4-f3abf08bbb4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56 95 17 75 1 86 57 47 60 63 89 60 67 37 3 44 87 93 31 34 70 27 62 68 "
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(2,3,4))\n",
+    "for x in np.nditer(a):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c69b13db-1e22-484a-a59f-97558419b078",
+   "metadata": {},
+   "source": [
+    "### iterating over sliced array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4c516d5b-7359-4276-b975-d8aac0be921f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[36  5 13 40]\n",
+      " [76 23 91  2]\n",
+      " [17 37 87 82]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "742ad0cb-edf4-4369-afd6-36cc65f6fd19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36 5 76 23 17 37 "
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(a[:,:2]):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88e23ce8-3035-41a1-8f10-fe5beda83b90",
+   "metadata": {},
+   "source": [
+    "### op_dtype "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "63994a63-fb31-4f18-9d85-bb4d40e2140a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(np.nditer) \n",
+    "# nditer(op, flags=None, op_flags=None, op_dtypes=None, order='K', casting='safe', op_axes=None, itershape=None, buffersize=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "8afae755-b30d-40e9-b277-d3ad5429c976",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0 93.0 65.0 32.0 49.0 98.0 65.0 42.0 13.0 63.0 68.0 9.0 \n",
+      "[[25 93 65 32]\n",
+      " [49 98 65 42]\n",
+      " [13 63 68  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(3,4))\n",
+    "for x in np.nditer(a,flags=['buffered'],op_dtypes=['float']):\n",
+    "    print(x,end=' ')\n",
+    "print()\n",
+    "print(a) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a230157-a565-45d9-9e1b-dbb1b4ea8e52",
+   "id": "8411cff5-287d-42ad-8e9c-005c86f0a6ba",
    "metadata": {},
    "outputs": [],
    "source": []
