ndenumerate() and Arithmetic ops on numpy arrays completed

--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -1269,8 +1269,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3e2b7386-ef5e-41de-9cc7-6f8e396a813d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[78 98 53 35]\n",
+      "  [ 1 31 27 95]\n",
+      "  [55 29 16 50]\n",
+      "  [87 25 96  2]]\n",
+      "\n",
+      " [[75 20 83 89]\n",
+      "  [19 18 91 15]\n",
+      "  [48 50 79 36]\n",
+      "  [78 59 47 95]]\n",
+      "\n",
+      " [[30 94 96 29]\n",
+      "  [68 66 83 22]\n",
+      "  [27 99 64 52]\n",
+      "  [86 13  1 48]]\n",
+      "\n",
+      " [[64 45 62 88]\n",
+      "  [22 51 24 77]\n",
+      "  [28 17 97 28]\n",
+      "  [36 81 61 96]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nditer() and dtypes \n",
+    "a = np.random.randint(1,101,(4,4,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f216e40b-f431-4f5b-ac91-04fac74c4d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78 98 53 35 1 31 27 95 55 29 16 50 87 25 96 2 75 20 83 89 19 18 91 15 48 50 79 36 78 59 47 95 30 94 96 29 68 66 83 22 27 99 64 52 86 13 1 48 64 45 62 88 22 51 24 77 28 17 97 28 36 81 61 96 "
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(a):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "190f2077-341e-4521-bc5c-b2fcda1aba6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.0 98.0 53.0 35.0 1.0 31.0 27.0 95.0 55.0 29.0 16.0 50.0 87.0 25.0 96.0 2.0 75.0 20.0 83.0 89.0 19.0 18.0 91.0 15.0 48.0 50.0 79.0 36.0 78.0 59.0 47.0 95.0 30.0 94.0 96.0 29.0 68.0 66.0 83.0 22.0 27.0 99.0 64.0 52.0 86.0 13.0 1.0 48.0 64.0 45.0 62.0 88.0 22.0 51.0 24.0 77.0 28.0 17.0 97.0 28.0 36.0 81.0 61.0 96.0 "
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(a,flags=['buffered'],op_dtypes=['float']):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b9f5e0a4-ceb0-43de-896c-fd1567c82305",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78 98 53 35 1 31 27 95 55 29 16 50 87 25 96 2 75 20 83 89 19 18 91 15 48 50 79 36 78 59 47 95 30 94 96 29 68 66 83 22 27 99 64 52 86 13 1 48 64 45 62 88 22 51 24 77 28 17 97 28 36 81 61 96 "
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(a,flags=['buffered'],op_dtypes=['str']):\n",
+    "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5336556f-6374-4609-bf3b-d94eab892163",
    "metadata": {},
    "outputs": [],
    "source": []
